# foodgram

./: README.md  foodgram_workflow.yml  pyproject.toml  tests.yml
.github/workflows/: main.yml
backend/: Dockerfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/api/: filters.py  mixins.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/api/tests/: test_recipe_endpoint.py  test_user_collections.py  test_user_endpoints.py
backend/api/tests/helpers/: mixins.py  schemas.py  utils.py
backend/foodgram_backend/: constants.py  settings.py
backend/recipes/: admin.py  mixins.py  models.py
backend/recipes/management/commands/: load_ingredients.py  load_tags.py
backend/recipes/migrations/: 0001_initial.py  0001_squashed_0003_alter_recipe_options.py  0002_initial.py  0003_alter_recipe_options.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_foodgramuser_options.py
data/: tags.json
infra/: .env.example  docker-compose.debug.yml  docker-compose.production.yml  docker-compose.yml  nginx.conf
